--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "typeorm": "^0.2.25",
     "uuidv4": "^6.1.1"
