--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "pg": "^8.2.1",
     "typeorm": "^0.2.25",
     "uuidv4": "^6.1.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.6",
     "ts-node-dev": "^1.0.0-pre.49",
     "typescript": "^3.9.5"
