--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.2.1",
     "typeorm": "^0.2.25",
     "uuidv4": "^6.1.1"
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.6",
+    "@types/jsonwebtoken": "^8.5.0",
     "ts-node-dev": "^1.0.0-pre.49",
     "typescript": "^3.9.5"
   }
