--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "Deyvison Penha <deyvisonpenha1@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "prod": "node --unhandled-rejections=strict dist/server.js",
     "dev": "ts-node-dev --inspect --ignore node_modules src/server.ts",
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
@@ -19,9 +21,18 @@
     "uuidv4": "^6.1.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.10.3",
+    "@babel/core": "^7.10.3",
+    "@babel/node": "^7.10.3",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-proposal-decorators": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
+    "@babel/preset-typescript": "^7.10.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.5.0",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-transform-typescript-metadata": "^0.3.0",
     "ts-node-dev": "^1.0.0-pre.49",
     "typescript": "^3.9.5"
   }
