--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,5 +2,4 @@ image:
   file: .gitpod.dockerfile
 
 tasks:
-  - init: yarn install
-    command: mkdir -p /workspace/data && mongod --dbpath /workspace/data
+  - init: mkdir -p /workspace/data && mongod --dbpath /workspace/data
