--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.24",
+    "multer": "^1.4.2",
     "pg": "^8.2.1",
     "ts-node": "^8.10.2",
     "typeorm": "^0.2.25",
@@ -36,6 +37,7 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/multer": "^1.4.3",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-transform-typescript-metadata": "^0.3.0",
     "gulp": "^4.0.2",
