--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-plugin-transform-typescript-metadata": "^0.3.0",
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
+    "mongojs": "^3.1.0",
     "ts-node-dev": "^1.0.0-pre.49",
     "typescript": "^3.9.5"
   }
